# python-basic-template

./: .coverage  .pre-commit-config.yaml  .tool-versions  README.md  noxfile.py  pyproject.toml
.github/workflows/: main.yml
pythonproject/: __main__.py  client.py  service.py
src/pythonproject/: client.py  service.py
tests/: test_service.py
